--- a/uploader/index.html
+++ b/uploader/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Chunkstream Uploader</title>
+    <title>Chunkstream-Video Sharing Platform</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- MP4Box.js for parsing MP4 atoms (served locally with CDN fallback) -->
